--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -3,3 +3,7 @@ FROM nginx:latest
 # copy the config files
 RUN rm /etc/nginx/conf.d/*
 COPY nginx.conf /etc/nginx/conf.d/backend.conf
+
+# copy ssl files
+RUN mkdir /certs
+COPY certs/* /certs/
