--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,30 +1,43 @@
 upstream backendnode {
     least_conn;
-    server app-node:5000;
+    server app-node-swarm:5000;
 }
 
-upstream backendpy {
-    least_conn;
-    server app-py:8000;
-}
+#upstream backendpy {
+#    least_conn;
+#    server app-py:8000;
+#}
 
 server {
     listen 80;
+
+    server_name localhost;
+
+    return 301 https://$server_name$request_uri;
+}
+
+server {
+    listen 443 ssl http2;
+
+    server_name localhost;
+
+    ssl_certificate     /certs/cert.pem;
+    ssl_certificate_key /certs/key.pem;
 
     proxy_set_header   Host $host;
     proxy_set_header   X-Real-IP $remote_addr;
     proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header   X-Forwarded-Host $server_name;
 
-    location /node {
-        proxy_pass http://backendnode;
+    location /node/ {
+        proxy_pass http://backendnode/;
         proxy_connect_timeout 1s;
         proxy_read_timeout 1s;
     }
 
-    location /py {
-        proxy_pass http://backendpy;
-        proxy_connect_timeout 1s;
-        proxy_read_timeout 1s;
-    }
+    #location /py/ {
+    #    proxy_pass http://backendpy;
+    #    proxy_connect_timeout 1s;
+    #    proxy_read_timeout 1s;
+    #}
 }
